# sourcepawn-studio

./: .editorconfig  .gitignore  .vscodeignore  404.html  CHANGELOG.md  Cargo.toml  LICENSE  README.md  esbuild.js  generate.ps1  index.html  index.ts  language-configuration.json  package-lock.json  package.json  sitemap.xml  tsconfig.json  webpack.config.js
crates/base-db/: Cargo.toml
crates/base-db/src/: change.rs  graph.rs  include.rs  input.rs  lib.rs
crates/completion-data/: Cargo.toml
crates/completion-data/src/: lib.rs
crates/flycheck/: Cargo.toml
crates/flycheck/src/: lib.rs  spcomp.rs
crates/hir-def/: Cargo.toml
crates/hir-def/src/: ast_id_map.rs  body.rs  child_by_source.rs  data.rs  db.rs  diagnostics.rs  dyn_map.rs  graph.rs  hir.rs  infer.rs  item_tree.rs  lib.rs  preprocessor.rs  resolver.rs  src.rs
crates/hir-def/src/body/: lower.rs  scope.rs
crates/hir-def/src/dyn_map/: keys.rs
crates/hir-def/src/hir/: type_ref.rs
crates/hir-def/src/item_tree/: lower.rs  pretty.rs
crates/ide/: Cargo.toml
crates/ide/src/: call_hierarchy.rs  completion.rs  events.rs  goto_definition.rs  graph.rs  hover.rs  lib.rs  markup.rs  prime_caches.rs  references.rs  rename.rs  signature_help.rs  status.rs  symbols.rs  syntax_highlighting.rs
crates/ide/src/completion/: defaults.rs  documentation.rs  events.rs  includes.rs  item.rs
crates/ide/src/hover/: actions.rs  render.rs
crates/parser/: Cargo.toml
crates/parser/src/: comment_parser.rs  define_parser.rs  enum_parser.rs  enum_struct_parser.rs  function_parser.rs  include_parser.rs  lib.rs  macro_parser.rs  methodmap_parser.rs  property_parser.rs  typedef_parser.rs  typeset_parser.rs  variable_parser.rs
crates/path_interner/: Cargo.toml
crates/path_interner/src/: lib.rs
crates/paths/: Cargo.toml
crates/paths/src/: lib.rs
crates/preprocessor/: Cargo.toml
crates/preprocessor/benches/: bench_main.rs
crates/preprocessor/src/: buffer.rs  conditions.rs  db.rs  errors.rs  evaluator.rs  lib.rs  macros.rs  offset.rs  preprocessor_operator.rs  result.rs  symbol.rs  test.rs  token.rs  transforms.rs
crates/preprocessor/tests/: main.rs
crates/preprocessor/tests/snapshots/: main__define_1-2.snap  main__define_1.snap  main__define_expansion_1-2.snap  main__define_expansion_1.snap  main__define_expansion_2-2.snap  main__define_expansion_2.snap  main__define_expansion_comment_1-2.snap  main__define_expansion_comment_1.snap  main__define_expansion_comment_2-2.snap  main__define_expansion_comment_2.snap  main__define_expansion_comment_3-2.snap  main__define_expansion_comment_3.snap  main__define_expansion_comment_4-2.snap  main__define_expansion_comment_4.snap  main__define_expansion_comment_5-2.snap  main__define_expansion_comment_5.snap  main__define_expansion_line_continuation_1-2.snap  main__define_expansion_line_continuation_1.snap  main__define_expansion_line_continuation_2-2.snap  main__define_expansion_line_continuation_2.snap  main__define_expansion_nested_1-2.snap  main__define_expansion_nested_1.snap  main__define_expansion_nested_2-2.snap  main__define_expansion_nested_2.snap  main__define_expansion_nested_3-2.snap  main__define_expansion_nested_3.snap  main__define_expansion_nested_4-2.snap  main__define_expansion_nested_4.snap  main__define_trailing_comment_1-2.snap  main__define_trailing_comment_1.snap  main__define_trailing_comment_3-2.snap  main__define_trailing_comment_3.snap  main__define_undef_1-2.snap  main__define_undef_1.snap  main__elseif_directive_expansion_1-2.snap  main__elseif_directive_expansion_1.snap  main__elseif_directive_expansion_2-2.snap  main__elseif_directive_expansion_2.snap  main__elseif_directive_expansion_3-2.snap  main__elseif_directive_expansion_3.snap  (+76 more)
crates/profile/: Cargo.toml
crates/profile/src/: hprof.rs  lib.rs  memory_usage.rs  stop_watch.rs  tree.rs
crates/sourcepawn-studio/: Cargo.toml
crates/sourcepawn-studio/benches/: bench_main.rs
crates/sourcepawn-studio/src/: capabilities.rs  config.rs  diagnostics.rs  fixture.rs  global_state.rs  lib.rs  line_index.rs  main.rs  main_loop.rs  op_queue.rs  reload.rs  task_pool.rs  version.rs
crates/sourcepawn-studio/src/handlers/: notification.rs  request.rs
crates/sourcepawn-studio/tests/: main.rs
crates/sourcepawn_lsp/: Cargo.toml
crates/sourcepawn_lsp/benches/: bench_main.rs
crates/sourcepawn_lsp/src/: capabilities.rs  client.rs  config.rs  diagnostics.rs  dispatch.rs  document.rs  fixture.rs  global_state.rs  lib.rs  line_index.rs  lsp.rs  lsp_ext.rs  main.rs  main_loop.rs  mem_docs.rs  progress.rs  reload.rs  store.rs  task_pool.rs  utils.rs
crates/sourcepawn_lsp/tests/: fixture.rs  main.rs
crates/sourcepawn_preprocessor/: Cargo.toml
crates/sourcepawn_preprocessor/src/: evaluator.rs  lib.rs  macros.rs  preprocessor.rs
crates/sourcepawn_preprocessor/tests/: main.rs
crates/store/: Cargo.toml
crates/store/src/: document.rs  environment.rs  graph.rs  include.rs  lib.rs  main_heuristic.rs  options.rs  path_interner.rs  semantics.rs  syntax.rs
crates/syntax/: Cargo.toml  NOTES.md  generator.py  grammar.js  grammar.json  transpose.py
crates/syntax/src/: ast.rs  comment.rs  define_item.rs  deprecated.rs  enum_item.rs  enum_member_item.rs  enum_struct_item.rs  function_item.rs  generated.rs  include_item.rs  lib.rs  methodmap_item.rs  parameter.rs  property_item.rs  syntax_error.rs  syntax_node.rs  tests.rs  typedef_item.rs  typeset_item.rs  utils.rs  variable_item.rs
crates/vfs-notify/: Cargo.toml
crates/vfs-notify/src/: lib.rs
src/sourcepawn_lexer/: Cargo.toml
src/sourcepawn_lexer/benches/: bench_main.rs
src/sourcepawn_lexer/src/: lexer.rs  lib.rs  main.rs  pragma.rs  preprocessor_arguments.rs  token.rs  token_kind.rs
src/sourcepawn_lexer/tests/: define.rs  include.rs  main.rs  pragma.rs
src/sourcepawn_preprocessor/: Cargo.toml  evaluator.rs  macros.rs  mod.rs  preprocessor.rs  preprocessor_operator.rs
src/sourcepawn_preprocessor/benches/: bench_main.rs
src/sourcepawn_preprocessor/src/: errors.rs  evaluator.rs  lib.rs  macros.rs  preprocessor.rs  preprocessor_operator.rs
(+1261 files in other folders)
