[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0"
authors = ["Sarrus"]

[profile.dev]
debug = 2

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.release]
debug = true

[workspace.dependencies]
sourcepawn_preprocessor = { path = "./crates/sourcepawn_preprocessor" }
sourcepawn_lsp = { path = "./crates/sourcepawn_lsp" }
