[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0"
authors = ["Sarrus"]

[profile.dev]
debug = 2

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.release]
debug = true

[workspace.dependencies]
preprocessor = { path = "./crates/preprocessor" }
sourcepawn_lsp = { path = "./crates/sourcepawn_lsp" }
store = { path = "./crates/store" }
syntax = { path = "./crates/syntax" }
lsp-server = "0.6.0"
derive-new = "0.5"
crossbeam-channel = "0.5.6"
dashmap = "5.4.0"
threadpool = "1.8.1"
walkdir = "2.3.2"
log = "0.4.17"
rowan = "0.15.10"
lazy_static = "1.4.0"
regex = "1.7.0"
notify = "5.1.0"
fxhash = "0.2.1"
tempfile = "3.4.0"
clap = { version = "4.1.13", features = ["derive"] }
fern = "0.6.2"
humantime = "2.1.0"
sourcepawn_lexer = "0.1.1"
sentry = "0.31.3"
parking_lot = "0.12.1"
lsp-types = "0.94.0"
anyhow = "1.0.66"
tree-sitter = "0.20.9"
tree-sitter-sourcepawn = { git = "https://github.com/Sarrus1/tree-sitter-sourcepawn" }
strip_bom = "1.0.0"
serde = "1.0.147"
serde_json = "^1.0.83"

[workspace.dependencies.uuid]
version = "1.3.0"
features = ["v4"]
