[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0"
authors = ["Sarrus"]

[profile.dev]
debug = 2

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.release]
debug = true

[workspace.dependencies]
preprocessor = { path = "./crates/preprocessor" }
sourcepawn_lsp = { path = "./crates/sourcepawn_lsp" }
store = { path = "./crates/store" }
syntax = { path = "./crates/syntax" }
parser = { path = "./crates/parser" }
semantic_analyzer = { path = "./crates/semantic_analyzer" }
linter = { path = "./crates/linter" }
vfs = { path = "./crates/vfs" }
vfs-notify = { path = "./crates/vfs-notify" }
base-db = { path = "./crates/base-db" }
ide = { path = "./crates/ide" }
ide-diagnostics = { path = "./crates/ide-diagnostics" }
ide-db = { path = "./crates/ide-db" }
hir = { path = "./crates/hir" }
hir-def = { path = "./crates/hir-def" }
stdx = { path = "./crates/stdx" }
paths = { path = "./crates/paths" }
lsp-server = "0.7.4"
crossbeam = "0.8.2"
dashmap = "5.4.0"
threadpool = "1.8.1"
walkdir = "2.3.2"
log = "0.4.17"
rowan = "0.15.10"
lazy_static = "1.4.0"
regex = "1.7.0"
notify = "6.1.1"
fxhash = "0.2.1"
tempfile = "3.4.0"
clap = { version = "4.1.13", features = ["derive"] }
fern = "0.6.2"
humantime = "2.1.0"
sourcepawn_lexer = "0.2.0"
sentry = "0.31.3"
parking_lot = "0.12.1"
lsp-types = { version = "=0.94.1", features = ["proposed"] }
anyhow = "1.0.66"
tree-sitter = "0.20.9"
tree-sitter-sourcepawn = { git = "https://github.com/nilshelmig/tree-sitter-sourcepawn" }
strip_bom = "1.0.0"
serde = "1.0.147"
serde_json = "^1.0.83"
nohash-hasher = "^0.2.0"
indexmap = "^2.0.0"
salsa = "0.17.0-pre.2"
tracing = "0.1.40"
smol_str = "0.2.0"
la-arena = "^0.3.1"
smallvec = { version = "1.10.0", features = [
    "const_new",
    "union",
    "const_generics",
] }
dunce = "1.0.4"
always-assert = "0.1.2"
itertools = "0.11.0"
bitflags = "2.4.2"


[workspace.dependencies.uuid]
version = "1.3.0"
features = ["v4"]
