[package]
name = "flycheck"
version = "0.1.0"
include = ["Cargo.toml", "src/"]
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
doctest = false

[dependencies]
crossbeam.workspace = true
tracing.workspace = true
serde_json.workspace = true
serde.workspace = true
anyhow.workspace = true
command-group = "2.0.1"
regex.workspace = true
lazy_static.workspace = true
lsp-types.workspace = true
rand = "0.8.5"

# local deps
paths.workspace = true
stdx.workspace = true
