[package]
name = "ide"
version = "0.1.0"
include = ["Cargo.toml", "src/"]
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
doctest = false

[dependencies]
lsp-types.workspace = true
tree-sitter.workspace = true
tree-sitter-sourcepawn.workspace = true
salsa.workspace = true
anyhow.workspace = true
fxhash.workspace = true
lazy_static.workspace = true
sourcepawn_lexer.workspace = true
regex.workspace = true
line-index = "0.1.0-pre.1"
tracing.workspace = true
log.workspace = true
itertools.workspace = true


# Local crates
hir-def.workspace = true
hir.workspace = true
syntax.workspace = true
vfs.workspace = true
base-db.workspace = true
ide-db.workspace = true
ide-diagnostics.workspace = true
preprocessor.workspace = true
