[package]
name = "preprocessor"
version = "0.1.0"
description = "SourcePawn preprocessor written in Rust"
include = ["Cargo.toml", "src/"]
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
doctest = false

[dependencies]
lsp-types.workspace = true
anyhow.workspace = true
lazy_static.workspace = true
regex.workspace = true
fxhash.workspace = true
sourcepawn_lexer.workspace = true
