[package]
name = "preprocessor"
version = "0.1.0"
description = "SourcePawn preprocessor written in Rust"
include = ["Cargo.toml", "src/"]
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
doctest = false

[dependencies]
lsp-types.workspace = true
anyhow.workspace = true
lazy_static.workspace = true
regex.workspace = true
fxhash.workspace = true
sourcepawn_lexer.workspace = true
salsa.workspace = true
log.workspace = true
smol_str.workspace = true
itertools.workspace = true
deepsize.workspace = true

vfs.workspace = true
base-db.workspace = true
stdx.workspace = true
syntax.workspace = true

[dev-dependencies]
criterion = "0.5.1"
minreq = { version = "2.7.0", features = ["https"] }
insta = "1.28.0"

[[bench]]
name = "bench_main"
harness = false
path = "benches/bench_main.rs"
