[package]
name = "profile"
version = "0.1.0"
include = ["Cargo.toml", "src/"]
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
doctest = false

[dependencies]
once_cell = "1.17.0"
cfg-if = "1.0.0"
libc = "0.2.135"
la-arena.workspace = true
countme = { version = "3.0.1", features = ["enable"] }
# jemalloc-ctl = { version = "0.5.0", package = "tikv-jemalloc-ctl", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "psapi"] }

[features]
jemalloc = []
