[package]
name = "sourcepawn-studio"
version = "0.13.11"
description = "Language Server implemention for the SourcePawn programming language."
include = ["Cargo.toml", "src/"]
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "sourcepawn-studio"
test = false

[lib]
doctest = false

[dependencies]
stdx.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tree-sitter.workspace = true
tree-sitter-sourcepawn.workspace = true
anyhow.workspace = true
crossbeam.workspace = true
dashmap.workspace = true
threadpool.workspace = true
walkdir.workspace = true
log.workspace = true
rowan.workspace = true
lazy_static.workspace = true
regex.workspace = true
notify.workspace = true
fxhash.workspace = true
tempfile.workspace = true
clap.workspace = true
fern.workspace = true
humantime.workspace = true
sourcepawn_lexer.workspace = true
sentry.workspace = true
preprocessor.workspace = true
base-db.workspace = true
syntax.workspace = true
parking_lot.workspace = true
uuid.workspace = true
tracing.workspace = true
salsa.workspace = true
dunce.workspace = true
always-assert.workspace = true
nohash-hasher = "0.2.0"
num_cpus = "1.16.0"
itertools.workspace = true
# This is only used in the fixture module for benchmarks and tests.
zip = "0.6.6"


# Local crates
vfs.workspace = true
vfs-notify.workspace = true
ide.workspace = true
ide-db.workspace = true
paths.workspace = true
flycheck.workspace = true
profile.workspace = true

[dependencies.openssl]
optional = true
version = "0.10.72"

[dev-dependencies]
assert_unordered = "0.3.5"
criterion = "0.5.1"
insta.workspace = true
minreq = { version = "2.7.0", features = ["https"] }
test-utils.workspace = true

[features]
# If compiling on a system without OpenSSL installed, or cross-compiling for a different
# architecture, enable this feature to compile OpenSSL as part of the build.
# See https://docs.rs/openssl/#vendored for more.
static_ssl = ['openssl/vendored']

[[bench]]
name = "bench_main"
harness = false
path = "benches/bench_main.rs"
