[package]
name = "sourcepawn_lsp"
version = "0.11.0"
description = "Language Server implemention for the SourcePawn programming language."
include = ["Cargo.toml", "src/"]
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "sourcepawn_lsp"
test = false

[lib]
doctest = false

[dependencies]
linter.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
semantic_analyzer.workspace = true
serde.workspace = true
serde_json.workspace = true
derive-new.workspace = true
tree-sitter.workspace = true
tree-sitter-sourcepawn.workspace = true
anyhow.workspace = true
crossbeam-channel.workspace = true
dashmap.workspace = true
threadpool.workspace = true
walkdir.workspace = true
log.workspace = true
rowan.workspace = true
lazy_static.workspace = true
regex.workspace = true
notify.workspace = true
fxhash.workspace = true
tempfile.workspace = true
clap.workspace = true
fern.workspace = true
humantime.workspace = true
sourcepawn_lexer.workspace = true
sentry.workspace = true
preprocessor.workspace = true
store.workspace = true
syntax.workspace = true
parking_lot.workspace = true
uuid.workspace = true

[dependencies.openssl]
optional = true
version = "0.10.55"

[dev-dependencies]
assert_unordered = "0.3.5"
criterion = { version = "0.4.0" }
itertools = "0.11.0"
insta = { version = "1.28.0", features = ["glob", "redactions", "json"] }

[features]
# If compiling on a system without OpenSSL installed, or cross-compiling for a different
# architecture, enable this feature to compile OpenSSL as part of the build.
# See https://docs.rs/openssl/#vendored for more.
static_ssl = ['openssl/vendored']
