[package]
name = "store"
version = "0.1.0"
include = ["Cargo.toml", "src/"]
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
doctest = false

[dependencies]
lsp-types = "0.94.0"
anyhow = "1.0.66"
lazy_static = "1.4.0"
regex = "1.7.0"
fxhash = "0.2.1"
parking_lot = "0.12.1"
sourcepawn_preprocessor.workspace = true
syntax.workspace = true
tree-sitter = "0.20.9"
tree-sitter-sourcepawn = { git = "https://github.com/Sarrus1/tree-sitter-sourcepawn" }
walkdir = "2.3.2"
notify = "5.1.0"
strip_bom = "1.0.0"
log = "0.4.17"
serde = "1.0.147"
serde_json = "^1.0.83"

[dependencies.uuid]
version = "1.3.0"
features = ["v4"]
