[package]
name = "syntax"
version = "0.1.0"
include = ["Cargo.toml", "src/"]
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
doctest = false

[dependencies]
lsp-types.workspace = true
anyhow.workspace = true
lazy_static.workspace = true
regex.workspace = true
fxhash.workspace = true
parking_lot.workspace = true
tree-sitter.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
