[package]
name = "syntax"
version = "0.1.0"
include = ["Cargo.toml", "src/"]
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
doctest = false

[dependencies]
lsp-types.workspace = true
anyhow.workspace = true
lazy_static.workspace = true
regex.workspace = true
fxhash.workspace = true
parking_lot.workspace = true
tree-sitter.workspace = true
tree-sitter-sourcepawn.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
sourcepawn_lexer.workspace = true

# Local crates
vfs.workspace = true

[dev-dependencies]
quote = "1.0.20"
proc-macro2 = "1.0.71"
xshell = "0.2.5"
convert_case = "0.6.0"
syn = "2.0.43"
test-utils.workspace = true
