[package]
name = "sourcepawn_preprocessor"
version = "0.1.0"
edition = "2021"
description = "SourcePawn preprocessor written in Rust"
license = "GPL-3.0"
include = ["Cargo.toml", "src/"]

[lib]
doctest = false

[dependencies]
lsp-types = "0.94.0"
anyhow = "1.0.66"
lazy_static = "1.4.0"
regex = "1.7.0"
fxhash = "0.2.1"
sourcepawn_lexer = "0.1.0"
